--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+    color: #333333;
     font-family: Arial, Helvetica, sans-serif;
     font-size: $m-size;
 }
@@ -19,3 +20,6 @@ button:disabled {
     font-weight: bold;
 }
 
+* {
+    box-sizing: border-box;
+}
